# geo3D

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: Mat4.cpp  Mat4.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Shape.hpp  Vec3.cpp  Vec3.hpp
tests/: Mat4Tests.cpp  PlaneTests.cpp  RayTests.cpp  Vec3Tests.cpp
